registration form changes

--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -168,7 +168,7 @@
 
   <section class="section-margin text-center font-family-Aileron">
     <h2>Become a Rydr with us</h2>
-  <a href="Driver_registration.html">  <button type="button" class="btn btn-primary text-center" id="">Registration</button></a>
+  <a href="Driver_registration.html">  <button type="button" class=" reg-but text-center" id="">Registration</button></a>
 
   </section>
 
