--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -179,7 +179,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center gap-2">
-                                    <button type="button" class="btn btn-primary" id="profile-next">Next</button>
+                                    <button type="button" class=" next-btn" id="profile-next">Next</button>
                                 </div>
 
 
@@ -208,7 +208,7 @@
                                         placeholder="Example: DL-1234567890" required>
                                 </div>
                                 <div class="text-center gap-2">
-                                    <button type="button" class="btn btn-primary"
+                                    <button type="button" class=" next-btn"
                                         id="driving-license-next">Next</button>
                                 </div>
                             </form>
@@ -263,7 +263,7 @@
                                     </select>
                                 </div>
                                 <div class="text-center gap-2">
-                                    <button type="button" class="btn btn-primary"   id="vehicle-rc-next">Next</button>
+                                    <button type="button" class=" next-btn"   id="vehicle-rc-next">Next</button>
                                 </div>
                             </form>
                         </div>
@@ -289,7 +289,7 @@
                         placeholder="Enter PAN Card number" required>
                 </div>
                 <div class="text-center gap-2">
-                    <button type="button" class="btn btn-primary" id="pan-card-next">Next</button>
+                    <button type="button" class=" next-btn" id="pan-card-next">Next</button>
                 </div>
             </form>
         </div>
@@ -315,7 +315,7 @@
                         placeholder="Enter Aadhaar Card number" required>
                 </div>
                 <div class=" text-center gap-2">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class=" next-btn">Submit</button>
                 </div>
             </form>
         </div>
