--- a/Initiative.html
+++ b/Initiative.html
@@ -102,31 +102,31 @@
     <h1 class="text-center">How we’re reducing Emissions</h1>
   </div>
 
-  <div class="methods section-margin">
+  <div class="methods section-margin col">
 
-    <div class="method-card">
+    <div class="method-card col-md-3">
       <img src="images/demo/leaf.png" alt="">
       <div class="methods-desc">
         <p class="">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+          All Rydr rides are carbon neutral – we offset every gram of CO2 emitted via Using Electric vehicles
         </p>
       </div>
     </div>
 
-    <div class="method-card">
+    <div class="method-card col-md-3">
       <img src="images/demo/method-2.png" alt="">
       <div class="methods-desc">
         <p class="">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+          Select Rydr to reduce emissions for your ride – electric bike cabs, every time
         </p>
       </div>
     </div>
 
-    <div class="method-card">
+    <div class="method-card col-md-3">
       <img src="images/demo/method-3.png" alt="">
       <div class="methods-desc">
         <p class="">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+          For every ride taken, we plant a tree. This not only helps in offsetting any minimal emissions produced but also contributes to reforestation efforts and biodiversity.
         </p>
       </div>
     </div>
