--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 
               <div class="card" style="background-color: #ffd7d7;" >
-                <img src="images/Rider image-04.png" alt="img-1">
+                <img src="images/demo/Rider image-icon-01.png" alt="img-1">
                 <div class="card-body">
                   <h5 class="">Easy pick & drop from & to any metro station</h5>
                   <p class="card-text  ">pick you up from any Metro
@@ -371,7 +371,7 @@
           <div class="cust-box-2 " data-aos="zoom-in">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-2">
+              <img src="images/demo/Rider image-icon-03.png" alt="img-2">
               <div class="card-body">
                 <h5 class="">Low cost rides</h5>
                 <p class="card-text  ">Rides available at a very
@@ -388,7 +388,7 @@
           <div class="cust-box-3" data-aos="zoom-in">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-3">
+              <img src="images/demo/Rider image-icon-02.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Assured rides</h5>
                 <p class="card-text  ">Get assured rides from any
@@ -414,9 +414,8 @@
               <img src="images/Rider image-04.png" alt="img-1">
               <div class="card-body">
                 <h5 class="">Drive at your
-                  convenience & maximize
-                  your earnings</h5>
-                <p class="card-text  ">Make money on your
+                  convenience</h5>
+                <p class="card-text  ">Ride on your
                   chosen schedule with
                   rides or deliveries or
                   both. You can use your
@@ -431,9 +430,10 @@
           <div class="driver-box-2 " data-aos="zoom-in">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-2">
+              <img src="images/demo/Rider image-icon-03.png" alt="img-2">
               <div class="card-body">
-                <h5 class="">Get paid fast</h5>
+                <h5 class="">Get paid fast &  maximize
+                  your earnings</h5>
                 <p class="card-text  ">Get Weekly Payments
                   directly in your bank
                   accounts.</p>
@@ -447,7 +447,7 @@
           <div class="driver-box-3 " data-aos="zoom-in">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-3">
+              <img src="images/demo/Rider image-08.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Get support when
                   you need</h5>
@@ -465,7 +465,7 @@
           <div class="driver-box-4 " data-aos="zoom-in">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-3">
+              <img src="images/demo/verify-document.gif" alt="img-3">
               <div class="card-body">
                 <h5 class="">Insured Rides</h5>
                 <p class="card-text  ">All rides are insured.
