accordian added at safety

--- a/Initiative.html
+++ b/Initiative.html
@@ -82,11 +82,11 @@
 
   <section class="section-margin">
 
-    <div class="initiative-top">
+    <div class="initiative-top side-padding">
       <div class="initi-head col ">
         <h1 class="text-center">
-          Reducing emissions – Together</h1>
-        <p class="details">it's important that we take action to reduce the impact of pollution in the city we love.
+          Reducing Emissions – Together</h1>
+        <p class="details">It's important that we take action to reduce the impact of pollution in the city we love.
           Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing carbon
           emission by booking a ride with us.
           Rydr's mission is to improve air quality by offering sustainable transportation options. By sharing rides or
@@ -104,7 +104,7 @@
   <section class="page-margin">
     <div class="center-content">
       <div class="content-head">
-        <h1 class="text-center">How we’re reducing Emissions</h1>
+        <h1 class="text-center">How We’re Reducing Emissions</h1>
       </div>
 
       <div class="methods section-margin col">
@@ -112,7 +112,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/leaf.png" alt="">
           <div class="methods-desc">
-            <p class="">
+            <p class="justify-content-center">
               All Rydr rides are carbon neutral – we offset every gram of CO2 emitted via Using Electric vehicles
             </p>
           </div>
@@ -121,7 +121,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/method-2.png" alt="">
           <div class="methods-desc">
-            <p class="">
+            <p class="justify-content-center">
               Select Rydr to reduce emissions for your ride – electric bike cabs, every time
             </p>
           </div>
@@ -130,7 +130,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/method-3.png" alt="">
           <div class="methods-desc">
-            <p class="">
+            <p class="justify-content-center">
               For every ride taken, we plant a tree. This not only helps in offsetting any minimal emissions produced
               but also contributes to reforestation efforts and biodiversity.
             </p>
@@ -142,13 +142,13 @@
     <section>
       <div class="planting-section">
 
-        <div class="initiative-top">
+        <div class="initiative-top side-padding">
           <div class="">
             <img class="initi-img" src="images/demo/planting.png" alt="">
           </div>
           <div class="initi-head col  ">
             <h1 class="text-center col-md-10">
-              Planting trees with every ride</h1>
+              Planting Trees With Every Ride</h1>
             <p class="details col-md-10">At Rydr, we are dedicated to supporting air quality improvement and various
               other projects across Delhi. Our aim is to enhance lives by planting trees throughout the city.
 
@@ -164,7 +164,7 @@
 
     <section class="d-flex justify-content-center align-items-center flex-column section-margin">
       <div>
-        <h1 class="section-margin">Carbon offsetting</h1>
+        <h1 class="section-margin">Carbon Offsetting</h1>
       </div>
       <div class="carbon_img">
         <img src="images/demo/carbon_last.jpg" alt="">
