--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
             <div class="mission-content col-md-7">
               <h3>Reducing Emissions- <strong></strong><span class="">TOGETHER</span></strong></h3>
-              <p class="desc-font-size">it's important that we take action to reduce the impact of pollution in the city
+              <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
                 we love.
                 Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing
                 carbon emission by booking a ride with us. <br> <a href="Initiative.html" class="know-more">know more</a></p>
@@ -267,7 +267,7 @@
           <div class="about-us-content ">
             <br>
             <div class="mission-content col-md-7">
-              <h3 class="">Creating employment opportunities
+              <h3 class="">Creating Employment Opportunities
               </h3>
               <p class="desc-font-size">Empowering man and women who form part of large work force to become self
                 dependent by rendering green
@@ -328,14 +328,14 @@
     <div class="d-flex justify-content-center section-margin">
       <div class="box text-center">
         <div class="box-1">
-          <h3>What is in it for you</h3>
+          <h3>What is in it For You</h3>
         </div>
         <div class="box-2">
           <div class="bottom-box customers active">
             <h4>Customers</h4>
           </div>
           <div class="bottom-box drivers-riders">
-            <h4>Drivers / Riders</h4>
+            <h4>Drivers/Riders</h4>
           </div>
         </div>
       </div>
@@ -467,7 +467,7 @@
             <div class="card" style="background-color: #ffd7d7;" >
               <img src="images/demo/verify-document.gif" alt="img-3">
               <div class="card-body">
-                <h5 class="">Insured Rides</h5>
+                <h5 class="">Insured rides</h5>
                 <p class="card-text  ">All rides are insured.
                   Accidental coverage
                   and medical benefits
@@ -501,7 +501,7 @@
 
     <div class="safety page-margin" id="safety">
       <div class="heading  text-center mb-4 ">
-        <h2> Safety for All</h2>
+        <h2> Safety For All</h2>
       </div>
       <div class="safety-top  ">
 
