--- a/rider_safety.html
+++ b/rider_safety.html
@@ -106,7 +106,7 @@
       <div class="safety-bottom section-margin">
         <div class="center-head">
           <div class="safety-page-heading">
-            <h4 class="text-center section-margin ">We ensure the well being of our Drivers</h4>
+            <h4 class="text-center section-margin ">We Ensure The Well Being of Our Drivers</h4>
           </div>
         </div>
 
@@ -164,7 +164,7 @@
               <div class="card" style="background-color: transparent" data-aos="zoom-in">
                 <img src="images/demo/support.png" alt="img-2">
                 <div class="card-body">
-                  <h5 class="">24 X 7 Customer Support</h5>
+                  <h5 class="">24 X 7 Customer support</h5>
                   <p class="card-text  ">Customer and Drivers can
                     report any kind of incidence or
                     issues through the 24*7
