--- a/safety.html
+++ b/safety.html
@@ -30,6 +30,71 @@
   
     <script defer referrerpolicy="origin" src="js/s.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+   <style>
+    .social-media-accordion {
+    position: fixed;
+    bottom: 50px;
+    right: 0px;
+    z-index: 1000;
+}
+
+.accordion-btn {
+    background-color: #c30000;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    transition: 0.4s;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    box-shadow: 0 0px 2px 2px rgb(249 229 229);;
+}
+
+.accordion-btn:hover {
+    background-color: #8f0303;
+}
+
+.accordion-content {
+    display: none;
+    flex-direction: column;
+    margin-top: 10px;
+    background-color:transparent;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+}
+
+.accordion-content img {
+  width: 30px;
+  height: 30px;
+  margin: 5px 0;
+}
+.accordion-content a {
+    /* padding: 5px; */
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    border-top: 1px solid #f1f1f1;
+    font-size: 14px;
+}
+
+.accordion-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.accordion-content a:first-child {
+    border-top: none;
+}
+
+   </style>
 </head>
 
 <body>
@@ -81,7 +146,7 @@
         <div class="safety-bottom section-margin">
             <div class="center-head">
                 <div class="safety-page-heading " style="margin-top: 7rem;">
-                    <h3 class="text-center section-margin">We ensure the well being of both, our Customers and Drivers
+                    <h3 class="text-center section-margin">We Ensure The Well Being of Both, Our Customers and Drivers
                     </h3>
                 </div>
             </div>
@@ -92,7 +157,7 @@
                     <img src="images/demo/cust_safeety.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">For Customer</h5>
-                        <p class="card-text">rides is tracked by Rydr, with access to latitude and longitude
+                        <p class="card-text">Rides are tracked by Rydr, with access to latitude and longitude
                             Data. </p>
                         <a href="customer.html" class="know-more">Know More</a>
                     </div>
@@ -114,6 +179,16 @@
         </div>
 
     </section>
+
+    <div class="social-media-accordion">
+      <button class="accordion-btn"><i class="bi bi-link-45deg"></i></button>
+      <div class="accordion-content">
+          <a href="#" class="social-link"><img src="images/demo/insta.png" alt="Instagram"></a>
+          <a href="#" class="social-link"><img src="images/demo/fb.png" alt="Facebook"></a>
+          <a href="#" class="social-link"><img src="images/demo/twitter.png" alt="Twitter"></a>
+      </div>
+  </div>
+  
 
     <!-- FOOTER SECTION  -->
   
@@ -251,6 +326,23 @@
   <script src="js/testimonial.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const accordionBtn = document.querySelector('.accordion-btn');
+        const accordionContent = document.querySelector('.accordion-content');
+
+        accordionBtn.addEventListener('click', function() {
+            if (accordionContent.style.display === "flex") {
+                accordionContent.style.display = "none";
+            } else {
+                accordionContent.style.display = "flex";
+            }
+        });
+    });
+</script>
+
+
   <script>
     window.dataLayer = window.dataLayer || [];
 
