--- a/login.html
+++ b/login.html
@@ -82,23 +82,25 @@
       <section class="log-sec">
         <div class="login">
             <div>
-                <h3 class="mb-4">Login</h3>
+                <h3 class="mb-4 mt-3">Login</h3>
             </div>
             <div class="login-form">
                 <form class="login-form-body" id="form-login">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                        <input type="text" class="form-control" name="username" id="username" placeholder="enter username">
                         <br><span id="username-error"></span>
                     </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control" id="password" placeholder="password" >
-                        <br><span id="password-error"></span>
-                        <button type="button" id="toggle-password"><i class="bi bi-eye"></i></button>
-                        
-                    </div>
+                    <div class="form-group password-container">
+                      <label for="password">Password</label>
+                      <input type="password" name="password" class="form-control" id="password" placeholder="enter password">
+                      <button type="button" id="toggle-password"><i class="bi bi-eye"></i></button>
+                      <br><span id="password-error"></span>
+                  </div>
                     <button type="submit" class="form-login loginBTN text-center">Login</button>
+                    <div>
+                      <a href="" class="mb-2">forgot password</a>
+                    </div>
                 </form>
             </div>
 
