header and heading chnages

--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -167,7 +167,7 @@
   </section>
 
   <section class="section-margin text-center font-family-Aileron">
-    <h2>Become a Rydr with us</h2>
+    <h2>Become a Driver</h2>
   <a href="Driver_registration.html">  <button type="button" class=" reg-but text-center" id="">Registration</button></a>
 
   </section>
