--- a/safety.html
+++ b/safety.html
@@ -55,7 +55,7 @@
     height: 40px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     margin: 5px;
-    box-shadow: 0 0px 2px 2px rgb(249 229 229);;
+    box-shadow: 0 0px 2px 2px rgb(249 229 229);
 }
 
 .accordion-btn:hover {
