--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div>
 
           <div class="about-us-content">
-            <div class="mission-content col-md-6">
+            <div class="mission-content col-md-7">
               <h3>Reducing Emissions- <span class="">TOGETHER</span></h3>
               <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
                 we love.
@@ -237,7 +237,7 @@
 
             </div>
 
-            <div class="mission-img col-md-6">
+            <div class="mission-img col-md-7">
               <img src="images/demo/mission-1.jpg" alt="mission-1">
             </div>
 
@@ -361,18 +361,16 @@
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
-                <h4>Easy pick & drop </h4>
+                <h3 class="mt-3">Easy pick & drop </h3>
                 <p class='ellipse'>pick you up from any Metro
                   Station and Drop you at your
                   destination and Vice-Versap.</p>
               </div>
 
 
-
-
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-                <h4>Low cost rides</h4>
+                <h3 class="mt-3">Low cost rides</h3>
                 <p class='ellipse'>Rides available at a very
                   attractive rates. Low surge
                   charges and no hidden cost.
@@ -380,19 +378,14 @@
               </div>
 
 
-
-
-
-
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                <div class="item-img"> <img src="images/demo/Rider image-icon-02.png" alt="Image 3"></div>
-                <h4>Assured rides</h4>
+                <h3 class="mt-3">Assured rides</h3>
                 <p class='ellipse'>Get assured rides from any
                   metro station to your
                   destination and vice versa, in
                   least time.</p>
               </div>
-
 
             </div>
 
@@ -406,7 +399,7 @@
 
               <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
-                <h4>Easy pick & drop</h4>
+                <h3>Easy pick & drop</h3>
                 <p class="ellipse">Pick you up from any Metro Station and drop you at your destination and vice versa.</p>
             </div>
 
@@ -416,21 +409,21 @@
 
             <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
 <div class="item-img">              <img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-              <h4>Low cost rides</h4>
+              <h3>Low cost rides</h3>
               <p class="ellipse">Rides available at very attractive rates. Low surge charges and no hidden costs. Pay before you start the ride.</p>
           </div>
           <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
               <div class="item-img">
                 <img src="images/demo/Rider image-icon-02.png" alt="Image 3">
               </div>
-              <h4>Assured rides</h4>
+              <h3>Assured rides</h3>
               <p class="ellipse">Get assured rides from any metro station to your destination and vice versa in the least time.</p>
           </div>
           <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
               <div class="item-img">
                 <img src="images/demo/Rider image-icon-04.png" alt="Image 4">
               </div>
-              <h4>Safe rides</h4>
+              <h3>Safe rides</h3>
               <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in place.</p>
           </div>
               </div>
@@ -464,12 +457,13 @@
 
         </div> -->
           <div class="safety-text">
-            <p class="text-center desc-font-size col-md-7 col-12 d-flex justify-content-center align-items-center">
+            <p class="desc-font-size col-md-8 col-12 ">
               At Rydr, well being of our customers is above everything else. We are constantly in
               pursuit of enhancing our safety measures to ensure every
               Rydr ride ia a pleasant and comfortable experience.
+              <br><a href="safety.html" class="know-more">know more</a>
             </p>
-            <a href="safety.html" class="know-more">know more</a>
+
           </div>
 
         </div>
