--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <p class="desc-font-size">Rydr is more than just a ride sharing platform. it’s a movement dedicated to
                 providing safe, reliable and
                 empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and by
-                men for all, ensures a secure, comfortable and green journey every time. <br> <a href="Initiative.html"
+                men for all, ensures a secure, comfortable and green journey every time. <br> <a href="Initiative.html#Empowered"
                   class="know-more">know more</a></p>
 
             </div>
@@ -272,7 +272,7 @@
             <div class="mission-content col-md-6">
               <h3 class="">Creating Green Jobs
               </h3>
-              <p class="desc-font-size">Empowering man and women who form part of large work force to become self
+              <p class=''>Empowering man and women who form part of large work force to become self
                 dependent by rendering green
                 ride sharing services. <br> <a href="Initiative.html" class="know-more">know more</a></p>
 
@@ -320,9 +320,22 @@
           <div class=" section-margin">
             <h2 class="sub-heading">Why Choose RYDR ?</h2>
           </div>
-          <div class="bottom-img text-center">
-            <img src="images/demo/why-choose.png" alt="bottom-img">
-          </div>
+          <div class="why-choose">
+            <div class="why-choose-content">
+                <ul class="points">
+                    <p><strong>No Cancellation : </strong>Zero ride cancellations ensuring uninterrupted and reliable transportation services.</p>
+                    <hr>
+                    <p><strong>Women & Men Drivers :</strong> A zero anxiety two wheeler all electric mobility solution platform to address the issue of women safety.</p>
+                    <hr>
+                    <p><strong>Flat Pricing : </strong>Ensuring fare & equitable fares for all rides, promoting transparency and trust in our pricing system.</p>
+                    <hr>
+                    <p><strong>Zero emmission :</strong> Minimizing the total CO2 output and implementing measures to further curtail harmful greenhouse gas emission.</p>
+                </ul>
+            </div>
+            <div class="why-choose-image">
+                <img src="images/demo/why-choose.png" alt="Placeholder Image">
+            </div>
+        </div>
         </div>
       </div>
 
@@ -354,7 +367,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" id="customer-part">
           <!-- crousal edit  -->
-          <div class="customer-cards section-margin container-fluid col-md-9 " data-aos="zoom-in">
+          <div class="customer-cards mt-3 container-fluid col-md-9 " data-aos="zoom-in">
 
 
             <div class="customer-cards-second">
@@ -450,7 +463,7 @@
         <div class=" text-center ">
           <h2 class="sub-heading"> Safety For All</h2>
         </div>
-        <div class="safety-top  ">
+        <div class="safety-top">
 
           <!-- <div class="safety-img col d-flex justify-content-center">
           <img src="images/demo/safe-ride-1.png" alt="img-1">
