--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </h5>
 
                   <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">Download Rydr</a>
-                  <a href="Driver_registration.html" class="btn rydr-btn btn-3 banner-btn-2">SignUp as
+                  <a href="#" class="btn rydr-btn btn-3 banner-btn-2">SignUp as
                     Driver</a>
                 </div>
               </div>
@@ -222,13 +222,13 @@
           <!-- <div class="col-12 col-lg-6"> -->
 
           <div class="section-margin">
-            <h2 class="text-center sub-heading ">Our Moto</h2>
+            <h2 class="text-center sub-heading "> Our Moto</h2>
          
           </div>
 
           <div class="about-us-content">
-            <div class="mission-content col-md-6">
-              <h3 class="super-sub-points">Reducing Emissions - TOGETHER</h3>
+            <div class="mission-content col-md-7">
+              <h3>Reducing Emissions- <span class="">TOGETHER</span></h3>
               <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
                 we love.
                 Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing
@@ -237,7 +237,7 @@
 
             </div>
 
-            <div class="mission-img col-md-6">
+            <div class="mission-img col-md-7">
               <img src="images/demo/mission-1.jpg" alt="mission-1">
             </div>
 
@@ -252,9 +252,9 @@
             </div>
 
             <div class="mission-content col-md-6">
-              <h3 class="super-sub-points">Empowered Women & Men - REDEFINE MOBILITY
+              <h3>Empowered Women & Men - REDEFINE MOBILITY
               </h3>
-              <p class="">Rydr is more than just a ride sharing platform. it’s a movement dedicated to
+              <p class="desc-font-size">Rydr is more than just a ride sharing platform. it’s a movement dedicated to
                 providing safe, reliable and
                 empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and by
                 men for all, ensures a secure, comfortable and green journey every time. <br> <a href="Initiative.html#Empowered"
@@ -270,7 +270,7 @@
           <div class="about-us-content ">
             <br>
             <div class="mission-content col-md-6">
-              <h3 class="super-sub-points">Creating Green Jobs
+              <h3 class="">Creating Green Jobs
               </h3>
               <p class=''>Empowering man and women who form part of large work force to become self
                 dependent by rendering green
@@ -298,24 +298,7 @@
 
     <section class="home-area container-fluid">
 
-      <div class="home-2">
-        <!-- <div class="second-top ">
-        <div class="top-left">
-          <h4>Redefining mobility by empowering
-            Men & Women</h4>
-          <p>
-            Rydr is more than just a ride sharing platform; it’s a movement
-            dedicated to providing safe, reliable and empowering
-            transportation for women. Our 100% electric vehicles fleet,
-            driven by women for women and by men for all, ensures a secure
-            and comfortable journey every time.
-          </p>
-        </div>
-        <div class="top-right">
-          <img src="images/riding-img-first.png" alt="riding img">
-        </div>
-      </div> -->
-
+      <div class="home-2 ">
         <div class="second-bottom  ">
           <div class=" section-margin">
             <h2 class="sub-heading">Why Choose RYDR ?</h2>
@@ -367,7 +350,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" id="customer-part">
           <!-- crousal edit  -->
-          <div class="customer-cards mt-3 container-fluid col-md-9 " data-aos="zoom-in">
+          <div class="customer-cards section-margin container-fluid col-md-9 " data-aos="zoom-in">
 
 
             <div class="customer-cards-second">
