--- a/index.html
+++ b/index.html
@@ -216,84 +216,58 @@
   <!-- ----------- MISSION SECTION ----------------  -->
   <section class="whole-page">
     <section class="rydr-about-us-area skew-all">
-      <div class="container d-flex justify-content-center align-items-center">
-        <div class="row col-md-10 col-12 d-flex justify-content-center align-items-center skew-reset">
 
-          <!-- <div class="col-12 col-lg-6"> -->
-
-          <div class="section-margin">
-            <h2 class="text-center sub-heading "> Our Moto</h2>
-         
+      <div class="mission-container d-flex justify-content-center align-items-center">
+        <div class="row  col-9 d-flex justify-content-center align-items-center skew-reset">
+          <div class="mission-section-margin">
+            <h2 class="text-center sub-heading">Our Moto</h2>
           </div>
 
           <div class="about-us-content">
             <div class="mission-content col-md-7">
-              <h3>Reducing Emissions- <span class="">TOGETHER</span></h3>
+              <h3 class="super-sub-points">Reducing Emissions - TOGETHER</h3>
               <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
-                we love.
-                Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing
-                carbon emission by booking a ride with us. <br> <a href="Initiative.html" class="know-more">know
-                  more</a></p>
-
+                we love. Rydr's mission is to improve the quality of air we breathe as we ride. You can contribute in
+                reducing carbon emission by booking a ride with us. <br> <br><a href="Initiative.html"
+                  class="know-more">know more</a></p>
             </div>
-
-            <div class="mission-img col-md-7">
-              <img src="images/demo/mission-1.jpg" alt="mission-1">
+            <div class="mission-img col-md-4">
+              <img class="sec-miss-img" src="images/demo/mission-1.jpg" alt="mission-1">
             </div>
-
           </div>
 
           <br>
 
-          <div class="about-us-content ">
-
-            <div class="mission-img col-md-6">
-              <img src="images/demo/mission-2.jpg" alt="mission-2">
+          <div class="about-us-content">
+            <div class="mission-img col-md-4">
+              <img class="sec-miss-img" src="images/demo/mission-2.jpg" alt="mission-2">
             </div>
-
-            <div class="mission-content col-md-6">
-              <h3>Empowered Women & Men - REDEFINE MOBILITY
-              </h3>
-              <p class="desc-font-size">Rydr is more than just a ride sharing platform. it’s a movement dedicated to
-                providing safe, reliable and
-                empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and by
-                men for all, ensures a secure, comfortable and green journey every time. <br> <a href="Initiative.html#Empowered"
-                  class="know-more">know more</a></p>
-
+            <div class="mission-content col-md-7">
+              <h3 class="super-sub-points">Empowered Women & Men - REDEFINE MOBILITY</h3>
+              <p>Rydr is more than just a ride-sharing platform. It’s a movement dedicated to providing safe, reliable
+                and empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and
+                by men for all, ensures a secure, comfortable and green journey every time. <br><br> <a
+                  href="Initiative.html#Empowered" class="know-more">know more</a></p>
             </div>
-
-
           </div>
 
-
-
-          <div class="about-us-content ">
+          <div class="about-us-content">
             <br>
-            <div class="mission-content col-md-6">
-              <h3 class="">Creating Green Jobs
-              </h3>
-              <p class=''>Empowering man and women who form part of large work force to become self
-                dependent by rendering green
-                ride sharing services. <br> <a href="Initiative.html" class="know-more">know more</a></p>
-
+            <div class="mission-content col-md-7">
+              <h3 class="super-sub-points">Creating Green Jobs</h3>
+              <p>Empowering men and women who form part of a large workforce to become self-dependent by rendering green
+                ride-sharing services. <br><br> <a href="Initiative.html" class="know-more">know more</a></p>
             </div>
-            <div class="mission-img col-md-6">
+            <div class="mission-img col-md-4">
               <img src="images/demo/mission-3.png" alt="mission-3">
             </div>
           </div>
-          <!-- </div> -->
-          <!-- <div class="col-12 col-lg-6">
-          <div class="about-us-thumbnail">
-            <img src="images/leadership-cuate.png" alt="">
-            <div class="rydr-video-area hi-icon-effect-8">
-              <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="hi-icon video-play-btn">
-                <i class="fa fa-play" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-        </div> -->
         </div>
       </div>
+
+
+      <!-- old  -->
+
     </section>
 
     <section class="home-area container-fluid">
@@ -305,20 +279,24 @@
           </div>
           <div class="why-choose">
             <div class="why-choose-content">
-                <ul class="points">
-                    <p><strong>No Cancellation : </strong>Zero ride cancellations ensuring uninterrupted and reliable transportation services.</p>
-                    <hr>
-                    <p><strong>Women & Men Drivers :</strong> A zero anxiety two wheeler all electric mobility solution platform to address the issue of women safety.</p>
-                    <hr>
-                    <p><strong>Flat Pricing : </strong>Ensuring fare & equitable fares for all rides, promoting transparency and trust in our pricing system.</p>
-                    <hr>
-                    <p><strong>Zero emmission :</strong> Minimizing the total CO2 output and implementing measures to further curtail harmful greenhouse gas emission.</p>
-                </ul>
+              <ul class="points">
+                <p><strong>No Cancellation : </strong>Zero ride cancellations ensuring uninterrupted and reliable
+                  transportation services.</p>
+                <hr>
+                <p><strong>Women & Men Drivers :</strong> A zero anxiety two wheeler all electric mobility solution
+                  platform to address the issue of women safety.</p>
+                <hr>
+                <p><strong>Flat Pricing : </strong>Ensuring fare & equitable fares for all rides, promoting transparency
+                  and trust in our pricing system.</p>
+                <hr>
+                <p><strong>Zero emmission :</strong> Minimizing the total CO2 output and implementing measures to
+                  further curtail harmful greenhouse gas emission.</p>
+              </ul>
             </div>
             <div class="why-choose-image">
-                <img src="images/demo/why-choose.png" alt="Placeholder Image">
+              <img src="images/demo/why-choose.png" alt="Placeholder Image">
             </div>
-        </div>
+          </div>
         </div>
       </div>
 
@@ -375,7 +353,7 @@
 
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
-               <div class="item-img"> <img src="images/demo/Rider image-icon-02.png" alt="Image 3"></div>
+                <div class="item-img"> <img src="images/demo/Rider image-icon-02.png" alt="Image 3"></div>
                 <h3 class="mt-3">Assured rides</h3>
                 <p class='ellipse'>Get assured rides from any
                   metro station to your
@@ -396,37 +374,41 @@
               <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
                 <h3>Easy pick & drop</h3>
-                <p class="ellipse">Pick you up from any Metro Station and drop you at your destination and vice versa.</p>
+                <p class="ellipse">Pick you up from any Metro Station and drop you at your destination and vice versa.
+                </p>
+              </div>
+
+
+
+
+
+              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+                <div class="item-img"> <img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
+                <h3>Low cost rides</h3>
+                <p class="ellipse">Rides available at very attractive rates. Low surge charges and no hidden costs. Pay
+                  before you start the ride.</p>
+              </div>
+              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+                <div class="item-img">
+                  <img src="images/demo/Rider image-icon-02.png" alt="Image 3">
+                </div>
+                <h3>Assured rides</h3>
+                <p class="ellipse">Get assured rides from any metro station to your destination and vice versa in the
+                  least time.</p>
+              </div>
+              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+                <div class="item-img">
+                  <img src="images/demo/Rider image-icon-04.png" alt="Image 4">
+                </div>
+                <h3>Safe rides</h3>
+                <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in
+                  place.</p>
+              </div>
             </div>
-
-
-
-
-
-            <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
-<div class="item-img">              <img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-              <h3>Low cost rides</h3>
-              <p class="ellipse">Rides available at very attractive rates. Low surge charges and no hidden costs. Pay before you start the ride.</p>
           </div>
-          <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
-              <div class="item-img">
-                <img src="images/demo/Rider image-icon-02.png" alt="Image 3">
-              </div>
-              <h3>Assured rides</h3>
-              <p class="ellipse">Get assured rides from any metro station to your destination and vice versa in the least time.</p>
-          </div>
-          <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
-              <div class="item-img">
-                <img src="images/demo/Rider image-icon-04.png" alt="Image 4">
-              </div>
-              <h3>Safe rides</h3>
-              <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in place.</p>
-          </div>
-              </div>
-            </div>
-          </div>
-
         </div>
+
+      </div>
       </div>
       <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -457,7 +439,7 @@
               At Rydr, well being of our customers is above everything else. We are constantly in
               pursuit of enhancing our safety measures to ensure every
               Rydr ride ia a pleasant and comfortable experience.
-              <br><a href="safety.html" class="know-more">know more</a>
+              <br><br><a href="safety.html" class="know-more">know more</a>
             </p>
 
           </div>
